カレンダー画面リファクタリング

--- a/days/src/main/resources/templates/calendar.html
+++ b/days/src/main/resources/templates/calendar.html
@@ -190,18 +190,24 @@
 
 <body>
     <table class="table-body">
-        <tr class="date-cell" th:each="days,each:${days}" th:object="${dayList}">
+        <tr class="date-cell" th:each="days,each:${days}">
             <td class="date-cell" th:text="${days.date}">1</td>
-            <td th:switch="${days.shiftOne}">            
+            <td th:switch="${days.shiftOne}">
                                 <div class="bg-green" th:case="1">
                                     <form method="POST" action="#" th:action="@{/calendar}">
                                         <p class="bg-green">1直</p>
                                         <input type="hidden" name="date" th:value="${days.date}">
                                         <input type="hidden" name="shiftOne" th:value="${days.shiftOne}">
-                                        <lavel>休暇者<input type="text" class="bg-green" name="vacationNameOne" th:value="${days.vacationNameOne}" ></lavel>
-                                        <lavel>残業者<input type="text" class="bg-green" name="overNameOne" th:value="${days.overNameOne}"></lavel>
-                                        <lavel>早出者<input type="text" class="bg-green" name="earlyNameOne" th:value="${days.earlyNameOne}"></lavel>
-                                        <input type="submit" value="登録">
+                                        <!--lavel>休暇者<select name="vacationNameOne" >
+                                                <option >選択</option>
+                                                <option th:each="shiftOneList,each:${shiftOneList}" th:selected="${vacationNameOne}"　th:text="${shiftOneList.nameList}"></option>
+                                            </select></!--lavel-->
+                                        <div th:fragment = "frag-one">
+                                            <lavel>休暇者<input type="text" class="bg-green" name="vacationNameOne" th:value="${days.vacationNameOne}" ></lavel>
+                                            <lavel>残業者<input type="text" class="bg-green" name="overNameOne" th:value="${days.overNameOne}"></lavel>
+                                            <lavel>早出者<input type="text" class="bg-green" name="earlyNameOne" th:value="${days.earlyNameOne}"></lavel>
+                                            <input type="submit" value="登録">
+                                        </div>
                                     </form>
                                 </div>
                                 <div class="bg-red" th:case="2">
@@ -209,10 +215,12 @@
                                         <p  class="bg-red">2直</p>
                                         <input type="hidden" name="date" th:value="${days.date}">
                                         <input type="hidden" name="shiftOne" th:value="${days.shiftOne}">
-                                        <lavel>休暇者<input type="text" class="bg-red" name="vacationNameTwo" th:value="${days.vacationNameTwo}"></lavel>
-                                        <lavel>残業者<input type="text" class="bg-red" name="overNameTwo" th:value="${days.overNameTwo}"></lavel>
-                                        <lavel>早出者<input type="text" class="bg-red" name="earlyNameTwo" th:value="${days.earlyNameTwo}"></lavel>
-                                        <input type="submit" value="登録">
+                                        <div th:fragment = "frag-two">
+                                            <lavel>休暇者<input type="text" class="bg-red" name="vacationNameTwo" th:value="${days.vacationNameTwo}"></lavel>
+                                            <lavel>残業者<input type="text" class="bg-red" name="overNameTwo" th:value="${days.overNameTwo}"></lavel>
+                                            <lavel>早出者<input type="text" class="bg-red" name="earlyNameTwo" th:value="${days.earlyNameTwo}"></lavel>
+                                            <input type="submit" value="登録">
+                                        </div>
                                     </form>
                                 </div>
                                 <div class="bg-blue" th:case="3">
@@ -220,19 +228,24 @@
                                         <p class="bg-blue">3直</p>
                                         <input type="hidden" name="date" th:value="${days.date}">
                                         <input type="hidden" name="shiftOne" th:value="${days.shiftOne}">
-                                        <lavel>休暇者<input type="text" class="bg-blue" name="vacationNameThree" th:value="${days.vacationNameThree}"></lavel>
-                                        <lavel>残業者<input type="text" class="bg-blue" name="overNameThree" th:value="${days.overNameThree}"></lavel>
-                                        <lavel>早出者<input type="text" class="bg-blue" name="earlyNameThree" th:value="${days.earlyNameThree}"></lavel>
-                                        <input type="submit" value="登録">
+                                        <div th:fragment = "frag-three">
+                                            <lavel>休暇者<input type="text" class="bg-blue" name="vacationNameThree" th:value="${days.vacationNameThree}"></lavel>
+                                            <lavel>残業者<input type="text" class="bg-blue" name="overNameThree" th:value="${days.overNameThree}"></lavel>
+                                            <lavel>早出者<input type="text" class="bg-blue" name="earlyNameThree" th:value="${days.earlyNameThree}"></lavel>
+                                            <input type="submit" value="登録">
+                                        </div>
                                     </form>
                                 </div>
-                                <div  th:case="4">
-                                    <p class="bg-gray">休み</p>
+                                <div th:fragment = "frag-other">
+                                    <div  th:case="4">
+                                        <p class="bg-gray">休み</p>
+                                    </div>
+                                    <div  th:case="9">
+                                        <p class="bg-pink">一斉休暇</p>
+                                    </div>
+                                    <p th:case="*">エラー</p>
                                 </div>
-                                <div  th:case="9">
-                                    <p class="bg-pink">一斉休暇</p>
-                                </div>
-                                <p th:case="*">エラー</p>
+                
             </td>
             <td th:switch="${days.shiftTwo}">
                                 <div class="bg-green" th:case="1">
@@ -240,10 +253,7 @@
                                         <p class="bg-green">1直</p>
                                         <input type="hidden" name="date" th:value="${days.date}">
                                         <input type="hidden" name="shiftTwo" th:value="${days.shiftTwo}">
-                                        <lavel>休暇者<input type="text" class="bg-green" name="vacationNameOne" th:value="${days.vacationNameOne}" ></lavel>
-                                        <lavel>残業者<input type="text" class="bg-green" name="overNameOne" th:value="${days.overNameOne}"></lavel>
-                                        <lavel>早出者<input type="text" class="bg-green" name="earlyNameOne" th:value="${days.earlyNameOne}"></lavel>
-                                        <input type="submit" value="登録">
+                                        <div th:include="calendar :: frag-one"></div>
                                     </form>
                                 </div>
                                 <div class="bg-red" th:case="2">
@@ -251,10 +261,7 @@
                                         <p class="bg-red">2直</p>
                                         <input type="hidden" name="date" th:value="${days.date}">
                                         <input type="hidden" name="shiftTwo" th:value="${days.shiftTwo}">
-                                        <lavel>休暇者<input type="text" class="bg-red" name="vacationNameTwo" th:value="${days.vacationNameTwo}"></lavel>
-                                        <lavel>残業者<input type="text" class="bg-red" name="overNameTwo" th:value="${days.overNameTwo}"></lavel>
-                                        <lavel>早出者<input type="text" class="bg-red" name="earlyNameTwo" th:value="${days.earlyNameTwo}"></lavel>
-                                        <input type="submit" value="登録">
+                                        <div th:include="calendar :: frag-two"></div>
                                     </form>
                                 </div>
                                 <div class="bg-blue" th:case="3">
@@ -262,30 +269,19 @@
                                         <p class="bg-blue">3直</p>
                                         <input type="hidden" name="date" th:value="${days.date}">
                                         <input type="hidden" name="shiftTwo" th:value="${days.shiftTwo}">
-                                        <lavel>休暇者<input type="text" class="bg-blue" name="vacationNameThree" th:value="${days.vacationNameThree}"></lavel>
-                                        <lavel>残業者<input type="text" class="bg-blue" name="overNameThree" th:value="${days.overNameThree}"></lavel>
-                                        <lavel>早出者<input type="text" class="bg-blue" name="earlyNameThree" th:value="${days.earlyNameThree}"></lavel>
-                                        <input type="submit" value="登録">
+                                        <div th:include="calendar :: frag-three"></div>
                                     </form>
                                 </div>
-                                <div  th:case="4">
-                                    <p class="bg-gray">休み</p>
-                                </div>
-                                <div  th:case="9">
-                                    <p class="bg-pink">一斉休暇</p>
-                                </div>
-                                <p th:case="*">エラー</p>
+                                <div th:include="calendar :: frag-other"></div>
             </td>
             <td th:switch="${days.shiftThree}">
+                
                                 <div class="bg-green" th:case="1">
                                     <form method="POST" action="#" th:action="@{/calendar}">
                                         <p class="bg-green">1直</p>
                                         <input type="hidden" name="date" th:value="${days.date}">
                                         <input type="hidden" name="shiftThree" th:value="${days.shiftThree}">
-                                        <lavel>休暇者<input type="text" class="bg-green" name="vacationNameOne" th:value="${days.vacationNameOne}" ></lavel>
-                                        <lavel>残業者<input type="text" class="bg-green" name="overNameOne" th:value="${days.overNameOne}"></lavel>
-                                        <lavel>早出者<input type="text" class="bg-green" name="earlyNameOne" th:value="${days.earlyNameOne}"></lavel>
-                                        <input type="submit" value="登録">
+                                        <div th:include="calendar :: frag-one"></div>
                                     </form>
                                 </div>
                                 <div class="bg-red" th:case="2">
@@ -293,10 +289,7 @@
                                         <p class="bg-red">2直</p>
                                         <input type="hidden" name="date" th:value="${days.date}">
                                         <input type="hidden" name="shiftThree" th:value="${days.shiftThree}">
-                                        <lavel>休暇者<input type="text" class="bg-red" name="vacationNameTwo" th:value="${days.vacationNameTwo}"></lavel>
-                                        <lavel>残業者<input type="text" class="bg-red" name="overNameTwo" th:value="${days.overNameTwo}"></lavel>
-                                        <lavel>早出者<input type="text" class="bg-red" name="earlyNameTwo" th:value="${days.earlyNameTwo}"></lavel>
-                                        <input type="submit" value="登録">
+                                        <div th:include="calendar :: frag-two"></div>
                                     </form>
                                 </div>
                                 <div class="bg-blue" th:case="3">
@@ -304,19 +297,10 @@
                                         <p class="bg-blue">3直</p>
                                         <input type="hidden" name="date" th:value="${days.date}">
                                         <input type="hidden" name="shiftThree" th:value="${days.shiftThree}">
-                                        <lavel>休暇者<input type="text" class="bg-blue" name="vacationNameThree" th:value="${days.vacationNameThree}"></lavel>
-                                        <lavel>残業者<input type="text" class="bg-blue" name="overNameThree" th:value="${days.overNameThree}"></lavel>
-                                        <lavel>早出者<input type="text" class="bg-blue" name="earlyNameThree" th:value="${days.earlyNameThree}"></lavel>
-                                        <input type="submit" value="登録">
+                                        <div th:include="calendar :: frag-three"></div>
                                     </form>
                                 </div>
-                                <div  th:case="4">
-                                    <p class="bg-gray">休み</p>
-                                </div>
-                                <div  th:case="9">
-                                    <p class="bg-pink">一斉休暇</p>
-                                </div>
-                                <p th:case="*">エラー</p>
+                                <div th:include="calendar :: frag-other"></div>
             </td>
             <td th:switch="${days.shiftFour}">
                                 <div class="bg-green" th:case="1">
@@ -324,10 +308,7 @@
                                         <p class="bg-green">1直</p>
                                         <input type="hidden" name="date" th:value="${days.date}">
                                         <input type="hidden" name="shiftFour" th:value="${days.shiftFour}">
-                                        <lavel>休暇者<input type="text" class="bg-green" name="vacationNameOne" th:value="${days.vacationNameOne}" ></lavel>
-                                        <lavel>残業者<input type="text" class="bg-green" name="overNameOne" th:value="${days.overNameOne}"></lavel>
-                                        <lavel>早出者<input type="text" class="bg-green" name="earlyNameOne" th:value="${days.earlyNameOne}"></lavel>
-                                        <input type="submit" value="登録">
+                                        <div th:include="calendar :: frag-one"></div>
                                     </form>
                                 </div>
                                 <div class="bg-red" th:case="2">
@@ -335,10 +316,7 @@
                                         <p class="bg-red">2直</p>
                                         <input type="hidden" name="date" th:value="${days.date}">
                                         <input type="hidden" name="shiftFour" th:value="${days.shiftFour}">
-                                        <lavel>休暇者<input type="text" class="bg-red" name="vacationNameTwo" th:value="${days.vacationNameTwo}"></lavel>
-                                        <lavel>残業者<input type="text" class="bg-red" name="overNameTwo" th:value="${days.overNameTwo}"></lavel>
-                                        <lavel>早出者<input type="text" class="bg-red" name="earlyNameTwo" th:value="${days.earlyNameTwo}"></lavel>
-                                        <input type="submit" value="登録">
+                                        <div th:include="calendar :: frag-two"></div>
                                     </form>
                                 </div>
                                 <div class="bg-blue" th:case="3">
@@ -346,19 +324,10 @@
                                         <p class="bg-blue">3直</p>
                                         <input type="hidden" name="date" th:value="${days.date}">
                                         <input type="hidden" name="shiftFour" th:value="${days.shiftFour}">
-                                        <lavel>休暇者<input type="text" class="bg-blue" name="vacationNameThree" th:value="${days.vacationNameThree}"></lavel>
-                                        <lavel>残業者<input type="text" class="bg-blue" name="overNameThree" th:value="${days.overNameThree}"></lavel>
-                                        <lavel>早出者<input type="text" class="bg-blue" name="earlyNameThree" th:value="${days.earlyNameThree}"></lavel>
-                                        <input type="submit" value="登録">
+                                        <div th:include="calendar :: frag-three"></div>
                                     </form>
                                 </div>
-                                <div  th:case="4">
-                                    <p class="bg-gray">休み</p>
-                                </div>
-                                <div  th:case="9">
-                                    <p class="bg-pink">一斉休暇</p>
-                                </div>
-                                <p th:case="*">エラー</p>
+                                <div th:include="calendar :: frag-other"></div>
             </td>
         </tr>
     </table>
