シフト画面デザイン修正/メンバー登録可能

--- a/days/src/main/resources/templates/shift.html
+++ b/days/src/main/resources/templates/shift.html
@@ -4,23 +4,187 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>出勤リスト</title>
+        <style>
+            header{
+                width:100%;
+                height: 150px;
+                background-color:beige;
+            }
+            .header-block{
+                display: flex;
+                align-content: center;
+            }
+            .header-block button{
+                width: 100px;
+                height:30px;
+                margin:30px 30px 0px 10px;
+                
+            }
+            .header-block h1{
+                margin: 50px 5px;
+            }
+            .header-block .insert{
+                border: solid black 1px;
+                margin: 10px;
+            }
+            .insert label{
+                padding: 20px;
+            }
+            .header-block .delete{
+                border: solid black 1px;
+                margin: 10px;
+            }
+            .delete label{
+                padding:0px 30px;
+            }
+            .header-block .newId{
+                width:30px;
+            }
+            .header-block .newName{
+                width:100px;
+            }
+            .header-block .newShift{
+                width:100px;
+            }
+            body{
+                margin: 0px 100px;
+            }
+            .list-table{
+                display: flex;
+                justify-content:space-around;
+                border: solid black 1px;
+                padding: 20px;
+                height:auto;
+            }
+            .list-table .id-name{
+                display: flex;
+                margin-bottom: 20px;
+                text-align: center;
+            }
+            .list-table .name-list{
+                display: flex;
+                width:100%;
+            }
+            
+            .list-table h3{
+                text-align: center;
+                border: solid black 1px;
+                padding:10px 60px;
+                background-color:beige;
+                margin: 0px;
+            }
+            
+            .list-table .item-id{
+                border: solid black 1px;
+                background-color:beige;
+                width:25%;
+                text-align: center;
+                margin: -1px 0px;
+                font-size: 14px;
+            }
+            .list-table .item-name{
+                border: solid black 1px;
+                width:75%;
+                background-color:beige;
+                margin : -1px 0px;
+                font-size: 14px;
+            }
+            .list-table .id{
+                border: solid black 1px;
+                background-color:beige;
+                width:25%;
+                text-align: center;
+                margin: 5px 0px;
+                padding: 5px 0px;
+            }
+            .list-table .name{
+                border: solid black 1px;
+                width:75%;
+                background-color:beige;
+                margin : 5px 0px;
+                padding:5px 0px 5px 5px; 
+            }
+            
+        
+        </style>
     </head>
+    <header>
+        
+        <div class="header-block">
+            <h1>シフトリスト</h1>
+            <div>
+                <form method="GET" action="#" th:action="@{/}">
+                    <button type="submit" >ホームへ戻る</button>
+                </form>
+                <form method="GET" action="#" th:action="@{/calendar}">
+                    <button type="submit" >カレンダー</button>
+                </form>
+            </div>
+                
+                <div class="insert">
+                    <form method="post" action=# th:action="@{/shift}">
+                        <p>新規作成</p>
+                        <label>ID</label><input class="newId" type="text" name="id"><br>
+                        <label>名前</label><input class="newName" type="text" name="nameList"><br>
+                        <label>シフト</label><input class="newShift" type="text" name="shiftName">
+                        <input type="submit" name="insert" value="登録">
+                    </form>
+                </div>
+                <div class="delete">
+                    <form method="post" action=# th:action="@{/shift}">
+                        <p>削除</p>
+                        <label>ID<input class="newId" type="text" name="id"></label>
+                        <input type="submit" name="delete" value="削除">
+                    </form>
+                </div>
+            </div>
+    </header>
     <body>
-        <form method="GET" action="#" th:action="@{/}">
-            <button type="submit" >ホームへ戻る</button>
-        </form>
-        <form method="GET" action="#" th:action="@{/calendar}">
-            <button type="submit" >カレンダー</button>
-        </form>
-        <table border="1">
-            <tr>
-                <th>Name</th>
-                <th>シフト</th>
-            </tr>
-            <tr th:each="list,each:${list}">
-                <td th:text="${list.nameList}"/>
-                <td th:text="${list.shiftName}"/>
-            </tr>
-        </table>
+        <div class="list-table">
+            <div>
+                <h3>シフト1</h3>
+                <div class="id-name">
+                    <p class="item-id">ID</p>
+                    <p class="item-name">名　　前</p>
+                </div>
+                <div class="name-list" th:each="listOne,each:${shiftOneList}" >
+                    <p class="id" th:text="${listOne.id}"/>
+                    <p class="name" th:text="${listOne.nameList}"/>
+                </div>
+            </div>
+            <div>
+                <h3>シフト2</h3>
+                <div class="id-name">
+                    <p class="item-id">ID</p>
+                    <p class="item-name">名　　前</p>
+                </div>
+                <div class="name-list" th:each="listTwo,each:${shiftTwoList}" >
+                    <p class="id" th:text="${listTwo.id}"/>
+                    <p class="name" th:text="${listTwo.nameList}"/>
+                </div>
+            </div>
+            <div >
+                <h3>シフト3</h3>
+                <div class="id-name">
+                    <p class="item-id">ID</p>
+                    <p class="item-name">名　　前</p>
+                </div>
+                <div class="name-list" th:each="listThree,each:${shiftThreeList}" >
+                    <p class="id" th:text="${listThree.id}"/>
+                    <p class="name" th:text="${listThree.nameList}"/>
+                </div>
+            </div>
+            <div>
+                <h3>シフト4</h3>
+                <div class="id-name">
+                    <p class="item-id">ID</p>
+                    <p class="item-name">名　　前</p>
+                </div>
+                <div class="name-list" th:each="listFour,each:${shiftFourList}" >
+                    <p class="id" th:text="${listFour.id}"/>
+                    <p class="name" th:text="${listFour.nameList}"/>
+                </div>
+            </div>
+        </div>
     </body>
     </html>
