--- a/pacific-thicket-85153/bin/main/templates/calclate.html
+++ b/pacific-thicket-85153/bin/main/templates/calclate.html
@@ -94,14 +94,14 @@
                     <h4>月始めの出勤開始日を入力してください</h4>
                         <p>※一斉休暇は除く</p>
                         <input type="text" name="inputDate">
-                        <h5 th:errors="${updateCode.inputDate}" class="error" >--日付が存在しません--</h5>
+                        <h5 th:if="${#fields.hasErrors('inputDate')}" th:errors="${updateCode.inputDate}" class="error" >--日付が存在しません--</h5>
                 </div>
                 <div class="text-box">
                             <h4>「シフト1」出勤開始日から5日間の数字を入力してください</h4>
                             <p>※一斉休暇は除き、「ヤ」(休み)の場合は「4」を入力してください</p>
                             <p>例：[1,1,ヤ,3,3]の場合、「11433」</p>
                             <input type="text" name="inputCode">
-                            <h5 th:errors="${updateCode.inputCode}" class="error" >--5桁の数字をを正しく入力してください--</h5>
+                            <h5 th:if="${#fields.hasErrors('inputCode')}" th:errors="${updateCode.inputCode}" class="error" >--5桁の数字をを正しく入力してください--</h5>
                 </div>
                         
             </div>
