デプロイデータ修正

--- a/pacific-thicket-85153/bin/main/templates/start.html
+++ b/pacific-thicket-85153/bin/main/templates/start.html
@@ -35,7 +35,7 @@
 </head>
 <body>
     <div class="title-flex">
-        <h2>こちらは勤怠管理アプリです</h2>
+        <h2>こちらは休暇者管理アプリケーションです</h2>
     </div>
     <div class="submit-flex">
         <form method="GET" action="#" th:action="@{/shift}">
