--- a/pacific-thicket-85153/src/main/resources/templates/calendar.html
+++ b/pacific-thicket-85153/src/main/resources/templates/calendar.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>勤怠</title>
+    <title>勤怠カレンダー</title>
     <style>
         header{
             background-color:beige;
